test/cli/test/context-foreach/kyverno-test.yaml
name: block-images
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: block-images
  resources:
  - bad-pod
  result: fail
  rule: block-images
- kind: Pod
  policy: block-images
  resources:
  - good-pod
  result: pass
  rule: block-images
variables: values.yaml
