test/cli/test/context-foreach/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-images
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: block-images
    validate:
      failureAction: Audit
      foreach:
      - context:
        - imageRegistry:
            reference: '{{ element.name }}'
          name: imageData
        deny:
          conditions:
          - key: '{{ imageData }}'
            operator: Equals
            value: '{{ element.name }}'
        list: request.object.spec.containers
      message: Images containing built-in volumes are prohibited.
