test/cli/test/context-foreach/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  containers:
  - name: busybox
    image: busybox:1.28
  - name: busybox1
    image: busybox:1.28

---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
  - name: foo
    image: busybox:1.28
  - name: foo1
    image: busybox:1.28
