test/cli/test/context-foreach/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: block-images
  rules:
  - name: block-images
    foreachValues:
    - imageData:
        - foo
        - foo1
